--- a/reporting/pom.xml
+++ b/reporting/pom.xml
@@ -2,7 +2,7 @@
   <parent>
     <artifactId>commons-monitoring-parent</artifactId>
     <groupId>org.apache.commons.monitoring</groupId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0-bios-1</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>commons-monitoring-reporting</artifactId>
@@ -20,9 +20,10 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-    	<groupId>xmlunit</groupId>
-    	<artifactId>xmlunit</artifactId>
-    	<version>1.2</version>
+      <groupId>xmlunit</groupId>
+      <artifactId>xmlunit</artifactId>
+      <version>1.2</version>
+	  <scope>test</scope>
     </dependency>
   </dependencies>
 </project>
