--- a/reporting/pom.xml
+++ b/reporting/pom.xml
@@ -2,7 +2,7 @@
   <parent>
     <artifactId>commons-monitoring-parent</artifactId>
     <groupId>org.apache.commons.monitoring</groupId>
-    <version>1.0-bios-1</version>
+    <version>1.0-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>commons-monitoring-reporting</artifactId>
@@ -27,7 +27,7 @@
       <groupId>javax.ws.rs</groupId>
       <artifactId>jsr311-api</artifactId>
       <version>1.1</version>
-      <scope>optional</scope>
+      <optional>true</optional>
     </dependency>   
     
     <dependency>
