--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,11 @@
         <artifactId>commons-monitoring-core</artifactId>
         <version>${project.version}</version>
       </dependency>
+      <dependency>
+        <groupId>org.apache.commons.monitoring</groupId>
+        <artifactId>commons-monitoring-instrumentation</artifactId>
+        <version>${project.version}</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
