--- a/spring/pom.xml
+++ b/spring/pom.xml
@@ -28,7 +28,7 @@
   <name>Commons Monitoring (Sandbox) :: Spring Integration</name>
 
   <properties>
-    <spring.version>2.5.6</spring.version>
+    <spring.version>3.2.3.RELEASE</spring.version>
   </properties>
 
   <dependencies>
