--- a/spring/pom.xml
+++ b/spring/pom.xml
@@ -23,7 +23,6 @@
     <version>1.0-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.apache.commons.monitoring</groupId>
   <artifactId>commons-monitoring-spring</artifactId>
   <name>Commons Monitoring (Sandbox) :: Spring Integration</name>
 
@@ -34,12 +33,7 @@
   <dependencies>
     <dependency>
       <groupId>org.springframework</groupId>
-      <artifactId>spring-context</artifactId>
-      <version>${spring.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-beans</artifactId>
+      <artifactId>spring-aop</artifactId>
       <version>${spring.version}</version>
     </dependency>
     <dependency>
@@ -48,18 +42,7 @@
     </dependency>
     <dependency>
       <groupId>org.apache.commons.monitoring</groupId>
-      <artifactId>commons-monitoring-instrumentation</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-aop</artifactId>
-      <version>${spring.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-web</artifactId>
-      <version>${spring.version}</version>
-      <optional>true</optional>
+      <artifactId>commons-monitoring-aop</artifactId>
     </dependency>
     <dependency>
       <groupId>aopalliance</groupId>
@@ -67,12 +50,22 @@
       <version>1.0</version>
       <optional>true</optional>
     </dependency>
+
     <dependency>
-      <groupId>javax.servlet</groupId>
-      <artifactId>servlet-api</artifactId>
-      <version>2.3</version>
-      <scope>provided</scope>
-      <optional>true</optional>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-context</artifactId>
+      <version>${spring.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-test</artifactId>
+      <version>${spring.version}</version>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 </project>
