--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,13 @@
       <organization>Apache</organization>
       <timezone>+10</timezone>
     </developer>
+    <developer>
+      <id>rmannibucau</id>
+      <name>Romain Manni-Bucau</name>
+      <email>rmannibucau AT apache DOT org</email>
+      <organization>Apache</organization>
+      <timezone>+2</timezone>
+    </developer>
   </developers>
 
   <scm>
@@ -70,6 +77,18 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>2.15</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-site-plugin</artifactId>
+          <version>3.3</version>
+          <dependencies>
+            <dependency>
+              <groupId>org.apache.maven.doxia</groupId>
+              <artifactId>doxia-module-markdown</artifactId>
+              <version>1.3</version>
+            </dependency>
+          </dependencies>
         </plugin>
       </plugins>
     </pluginManagement>
