--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,7 @@
     <module>reporting</module>
     <module>graphite</module>
     <module>cube</module>
+    <module>collector</module>
   </modules>
 
   <developers>
